examples/k3s-kube-cluster/whoami-traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami-ns
  labels:
    name: whoami-ns

---

# Create deployment: 2 whoami using dockerhub creds
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deployment
  namespace: whoami-ns
spec:
  selector:
    matchLabels:
      app: whoami
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: containous/whoami:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: regcred
      nodeSelector:
        web: "true"

---

apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami-ns
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: whoami-ns
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
